--- a/5.html
+++ b/5.html
@@ -2,11 +2,11 @@
 <head>
 <title> Educacion fisica </title>
 </head>
-<body background="FONDO.Jpeg">
+<body background="FONDO.jpeg">
 <center>
-<IMG SRC= "descarga3.Jpeg" WIDTH=800 HEIGTH=150 BORDER=0>
+<IMG SRC= "descarga3.jpeg" WIDTH=800 HEIGTH=150 BORDER=0>
 <center>
-<TH><A HREF=" INICIO.html"> INICIO.</A></TH>
+<TH><A HREF=" index.html"> INICIO.</A></TH>
 <TH><A HREF="1.html"> que es la educacion fisica </A></TH>
 <TH><A HREF="2.html"> flexibilidad</A></TH>
 <TH><A HREF= "3.html"> mejores ejercios </A></TH>
