--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 <title> Educacion fisica </title>
 </head>
-<body background="FONDO.Jpeg">
+<body background="FONDO.jpeg">
 <center>
-<IMG SRC= "descarga3.Jpeg" WIDTH=800 HEIGTH=150 BORDER=0>
+<IMG SRC= "descarga3.jpeg" WIDTH=800 HEIGTH=150 BORDER=0>
 <center>
     <TH><A HREF="1.html"> que es la educacion fisica </A></TH>
 <TH><A HREF="2.html"> flexibilidad </A></TH>
